# extensible-design-python

./: LICENSE  README.md  pyproject.toml
snek-lib/: i_snek_repository.py
snek_lib/: utilities.py
snek_lib/addons/: fake_snek_repository.py  local_snek_repository.py
snek_lib/cli/: __main__.py
snek_lib/client/: __main__.py
snek_lib/core/: i_snek_repository.py
snek_lib/model/: snek.py  snek_id.py
snek_lib/server/: app.py
