[project]
name = "snek-lib"
version = "0.0.1"
description = "Example of extensible design patterns in Python."
authors = [
    { name = "Frank Longford", email = "flongford@enthought.com" },
]
readme = "README.md"

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.entry-points.console_scripts]
snek = "snek_lib.cli.__main__:main"

[project.entry-points."snek_repository_factories"]
fake = "snek_lib.addons.fake_snek_repository:FakeSnekRepository"
